--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-quickstart",
+  "name": "weather-app",
   "version": "1.0.0",
   "scripts": {
     "start": "tsc && concurrently \"npm run tsc:w\" \"npm run lite\" ",
@@ -21,7 +21,6 @@
     "@angular/router": "3.0.0",
     "@angular/upgrade": "2.0.0",
     "angular2-in-memory-web-api": "0.0.20",
-    "bootstrap": "^3.3.6",
     "core-js": "^2.4.1",
     "ng2-webstorage": "^1.3.1",
     "reflect-metadata": "^0.1.3",
